lib_LTLIBRARIES = libdmapsharing-3.0.la

BUILT_SOURCES = dmap-marshal.c dmap-marshal.h dmap-enums.c dmap-enums.h

libdmapsharing_3_0_la_SOURCES = \
	$(BUILT_SOURCES) \
	daap-connection.c \
	daap-record.c \
	daap-share.c \
	dacp-share.c \
	dacp-player.c \
	dmap-connection.c \
	dmap-container-db.c \
	dmap-container-record.c \
	dmap-db.c \
	dmap-md5.c \
	dmap-record.c \
	dmap-record-factory.c \
	dmap-share.c \
	dmap-structure.c \
	dmap-utils.c \
	dpap-connection.c \
	dpap-record.c \
	dpap-share.c

if USE_HOWL
libdmapsharing_3_0_la_SOURCES += \
	dmap-mdns-browser-howl.c
else
if USE_DNS_SD
libdmapsharing_3_0_la_SOURCES += \
	dmap-mdns-browser-dnssd.c \
	dmap-mdns-publisher-dnssd.c
else
libdmapsharing_3_0_la_SOURCES += \
	dmap-mdns-avahi.c \
	dmap-mdns-browser-avahi.c \
	dmap-mdns-publisher-avahi.c
endif
endif

if USE_GSTREAMERAPP
libdmapsharing_3_0_la_SOURCES += \
	g-gst-input-stream.c \
	g-gst-mp3-input-stream.c \
	g-gst-wav-input-stream.c \
	gst-util.c
endif

libdmapsharing_3_0_la_CFLAGS = \
	-DG_LOG_DOMAIN=\"libdmapsharing\" \
	-I$(top_srcdir) \
	$(GDKPIXBUF_CFLAGS) \
	$(SOUP_CFLAGS) \
	$(GSTREAMERAPP_CFLAGS) \
	$(MDNS_CFLAGS)

libdmapsharing_3_0_la_LDFLAGS = \
	-version-info @SO_VERSION@ \
	$(GLIB_LIBS) \
	$(GTHREAD_LIBS) \
	$(GOBJECT_LIBS) \
	$(GDKPIXBUF_LIBS) \
	$(MDNS_LIBS) \
	$(GSTREAMERAPP_LIBS) \
	$(SOUP_LIBS)

libdmapsharingincludedir = \
	$(includedir)/libdmapsharing-@API_VERSION@/libdmapsharing

libdmapsharinginclude_HEADERS = \
	daap-connection.h \
	daap-record.h \
	daap-share.h \
	dacp-share.h \
	dacp-player.h \
	dmap.h \
	dmap-connection.h \
	dmap-container-db.h \
	dmap-container-record.h \
	dmap-db.h \
	dmap-md5.h \
	dmap-mdns-browser.h \
	dmap-mdns-publisher.h \
	dmap-record.h \
	dmap-record-factory.h \
	dmap-share.h \
	dmap-structure.h \
	dpap-connection.h \
	dpap-record.h \
	dpap-share.h

noinst_HEADERS = \
	dmap-enums.h \
	dmap-marshal.h \
	dmap-config.h \
	dmap-mdns-avahi.h \
	dmap-utils.h \
	g-gst-input-stream.h \
	g-gst-mp3-input-stream.h \
	g-gst-wav-input-stream.h \
	gst-util.h

dmap-marshal.c: dmap-marshal.list
	@glib-genmarshal --prefix=dmap_marshal $(srcdir)/dmap-marshal.list --header --body > dmap-marshal.c

dmap-marshal.h: dmap-marshal.list
	@glib-genmarshal --prefix=dmap_marshal $(srcdir)/dmap-marshal.list --header > dmap-marshal.h
	
dmap-enums.h: $(libdmapsharinginclude_HEADERS) Makefile
	@glib-mkenums \
			--fhead "/* Automatically generated by glib-mkenums */\n\n#ifndef DMAP_ENUMS_H\n#define DMAP_ENUMS_H\n\n#include <glib-object.h>\n\nG_BEGIN_DECLS\n\n" \
			--fprod "\n/* enumerations from \"@filename@\" */\n" \
			--vhead "GType @enum_name@_get_type (void) G_GNUC_CONST;\n#define TYPE_@ENUMNAME@ (@enum_name@_get_type())\n" \
			--ftail "G_END_DECLS\n\n#endif /* !DMAP_ENUMS_H */" $(addprefix $(srcdir)/,$(libdmapsharinginclude_HEADERS)) > $@.tmp \
	&& sed -e "s/d_map/dmap/" -e "s/D_MAP/DMAP/" -e "s/d_acp/dacp/" -e "s/D_ACP/DACP/" $@.tmp > $@ \
	&& rm -f $@.tmp

dmap-enums.c: $(libdmapsharinginclude_headers) Makefile dmap-enums.h
	@glib-mkenums \
			--fhead "/* Automatically generated by glib-mkenums */\n\n#include \"dacp-share.h\"\n#include \"dacp-player.h\"\n#include \"dmap-mdns-publisher.h\"\n#include \"dmap-mdns-browser.h\"\n#include \"dmap-connection.h\"\n#include \"dmap-enums.h\"" \
			--fprod "\n/* enumerations from \"@filename@\" */" \
			--vhead "GType\n@enum_name@_get_type (void)\n{\n  static GType etype = 0;\n  if (etype == 0) {\n    static const G@Type@Value values[] = {" \
			--vprod "      { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
			--vtail "      { 0, NULL, NULL }\n    };\n    etype = g_@type@_register_static (\"@EnumName@\", values);\n  }\n  return etype;\n}\n" \
		$(addprefix $(srcdir)/,$(libdmapsharinginclude_HEADERS)) > $@.tmp \
	&& sed -e "s/d_map/dmap/" -e "s/D_MAP/DMAP/" -e "s/d_acp/dacp/" -e "s/D_ACP/DACP/" $@.tmp > $@ \
	&& rm -f $@.tmp

CLEANFILES = $(BUILT_SOURCES)

EXTRA_DIST = dmap-marshal.list
