lib_LTLIBRARIES = libdmapsharing-3.0.la

libdmapsharing_3_0_la_SOURCES = \
	daap-connection.c \
	daap-record.c \
	daap-share.c \
	dacp-connection.c \
	dacp-player.c \
	dacp-share.c \
	dmap-connection.c \
	dmap-container-db.c \
	dmap-container-record.c \
	dmap-db.c \
	dmap-enums.c \
	dmap-md5.c \
	dmap-private-utils.c \
	dmap-record.c \
	dmap-record-factory.c \
	dmap-share.c \
	dmap-structure.c \
	dmap-utils.c \
	dpap-connection.c \
	dpap-record.c \
	dpap-share.c

if TESTS_ENABLED
libdmapsharing_3_0_la_SOURCES += \
	test-daap-record.c \
	test-daap-record-factory.c \
	test-dpap-record.c \
	test-dpap-record-factory.c
endif

if USE_DNS_SD
libdmapsharing_3_0_la_SOURCES += \
	dmap-mdns-browser-dnssd.c \
	dmap-mdns-publisher-dnssd.c
else
libdmapsharing_3_0_la_SOURCES += \
	dmap-mdns-avahi.c \
	dmap-mdns-browser-avahi.c \
	dmap-mdns-publisher-avahi.c
endif

if USE_GSTREAMERAPP
libdmapsharing_3_0_la_SOURCES += \
	dmap-gst-input-stream.c \
	dmap-gst-mp3-input-stream.c \
	dmap-gst-qt-input-stream.c \
	dmap-gst-wav-input-stream.c \
	gst-util.c
endif

libdmapsharing_3_0_la_CFLAGS = \
	-DG_LOG_DOMAIN=\"libdmapsharing\" \
	-I$(top_srcdir) \
	-I$(top_builddir) \
	$(GDKPIXBUF_CFLAGS) \
	$(SOUP_CFLAGS) \
	$(GSTREAMERAPP_CFLAGS) \
	$(MDNS_CFLAGS) \
	$(WARN_CFLAGS)

libdmapsharing_3_0_la_LDFLAGS = \
	$(CHECK_LIBS) \
	$(GLIB_LIBS) \
	$(GTHREAD_LIBS) \
	$(GOBJECT_LIBS) \
	$(GDKPIXBUF_LIBS) \
	$(MDNS_LIBS) \
	$(GSTREAMERAPP_LIBS) \
	$(SOUP_LIBS)

libdmapsharingincludedir = \
	$(includedir)/libdmapsharing-@API_VERSION@/libdmapsharing

libdmapsharinginclude_HEADERS = \
	daap-connection.h \
	daap-record.h \
	daap-share.h \
	dacp-connection.h \
	dacp-share.h \
	dacp-player.h \
	dmap.h \
	dmap-connection.h \
	dmap-container-db.h \
	dmap-container-record.h \
	dmap-db.h \
	dmap-enums.h \
	dmap-md5.h \
	dmap-mdns-browser.h \
	dmap-mdns-publisher.h \
	dmap-record.h \
	dmap-record-factory.h \
	dmap-share.h \
	dmap-structure.h \
	dmap-utils.h \
	dpap-connection.h \
	dpap-record.h \
	dpap-share.h

if USE_GSTREAMERAPP
libdmapsharinginclude_HEADERS += \
	dmap-gst-input-stream.h
endif

noinst_HEADERS = \
	dmap-config.h \
	dmap-gst-mp3-input-stream.h \
	dmap-gst-qt-input-stream.h \
	dmap-gst-wav-input-stream.h \
	dmap-mdns-avahi.h \
	dmap-private-utils.h \
	gst-util.h \
	test-daap-record-factory.h \
	test-daap-record.h \
	test-dpap-record-factory.h \
	test-dpap-record.h

BUILT_SOURCES = dmap-enums.c dmap-enums.h unit-test.stamp

CLEANFILES = $(BUILT_SOURCES) ../tests/unit-test.c *-suite.c pedansee.conf

dmap-enums.c: $(libdmapsharinginclude_headers) Makefile dmap-enums.h
	@glib-mkenums \
			--fhead "/* Automatically generated by glib-mkenums */\n\n#include \"dacp-share.h\"\n#include \"dacp-player.h\"\n#include \"dmap-mdns-publisher.h\"\n#include \"dmap-mdns-browser.h\"\n#include \"dmap-connection.h\"\n#include \"dmap-enums.h\"" \
			--fprod "\n/* enumerations from \"@filename@\" */" \
			--vhead "GType\n@enum_name@_get_type (void)\n{\n  static GType etype = 0;\n  if (etype == 0) {\n    static const G@Type@Value values[] = {" \
			--vprod "      { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
			--vtail "      { 0, NULL, NULL }\n    };\n    etype = g_@type@_register_static (\"@EnumName@\", values);\n  }\n  return etype;\n}\n" \
		$(addprefix $(srcdir)/,$(libdmapsharinginclude_HEADERS)) > $@.tmp \
	&& sed -e "s/d_map/dmap/" -e "s/D_MAP/DMAP/" -e "s/d_acp/dacp/" -e "s/D_ACP/DACP/" $@.tmp > $@ \
	&& rm -f $@.tmp

dmap-enums.h: $(libdmapsharinginclude_HEADERS) Makefile
	@glib-mkenums \
			--fhead "/* Automatically generated by glib-mkenums */\n\n#ifndef DMAP_ENUMS_H\n#define DMAP_ENUMS_H\n\n#include <glib-object.h>\n\nG_BEGIN_DECLS\n\n" \
			--fprod "\n/* enumerations from \"@filename@\" */\n" \
			--vhead "GType @enum_name@_get_type (void) G_GNUC_CONST;\n#define DMAP_TYPE_@ENUMNAME@ (@enum_name@_get_type())\n" \
			--ftail "G_END_DECLS\n\n#endif /* !DMAP_ENUMS_H */" $(addprefix $(srcdir)/,$(libdmapsharinginclude_HEADERS)) > $@.tmp \
	&& sed -e "s/d_map/dmap/" -e "s/D_MAP/DMAP/" -e "s/d_acp/dacp/" -e "s/D_ACP/DACP/" $@.tmp > $@ \
	&& rm -f $@.tmp

unit-test.stamp: *.c
	./generate-test-suites
	mv unit-test.c ../tests
	touch unit-test.stamp

if HAVE_INTROSPECTION
include $(INTROSPECTION_MAKEFILE)
INTROSPECTION_GIRS =
INTROSPECTION_SCANNER_ARGS = --symbol-prefix=dmap --add-include-path=$(srcdir) --warn-all
INTROSPECTION_COMPILER_ARGS = --includedir=$(srcdir)

introspection_sources = $(libdmapsharinginclude_HEADERS) $(libdmapsharinginclude_SOURCES)

DMAP-3.0.gir: libdmapsharing-3.0.la
DMAP_3_0_gir_INCLUDES = GObject-2.0 Soup-2.4
DMAP_3_0_gir_CFLAGS = \
	$(libdmapsharing_3_0_la_CFLAGS)
DMAP_3_0_gir_LIBS = \
	libdmapsharing-3.0.la
DMAP_3_0_gir_FILES = $(introspection_sources)

INTROSPECTION_GIRS += DMAP-3.0.gir

girdir = $(datadir)/gir-1.0
gir_DATA = $(INTROSPECTION_GIRS)

typelibdir = $(libdir)/girepository-1.0
typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)

CLEANFILES += $(gir_DATA) $(typelib_DATA)
endif

check:
if HAVE_PEDANSEE
	echo    "[ignore]" > pedansee.conf
	echo -n "	name = " >> pedansee.conf
	for i in $$(grep G_DEFINE_TYPE *.c | sed 's/[^,]*, \([^,]*\),.*/\1/g'); do \
		echo -n $${i}_init\;; \
		echo -n $${i}_class_init\;; \
		echo -n $${i}_parent_class\;; \
		echo -n $${i}_get_instance_private\;; \
		echo -n $${i}_class_intern_init\;; \
		echo -n $${i}_get_type\;; \
	done >> pedansee.conf
	for i in $$(grep G_DEFINE_TYPE *.c | sed 's/.*(\([^,]*\),.*/\1/g'); do \
		echo -n $${i}_private_offset\;; \
	done >> pedansee.conf
	set -e; for i in $(libdmapsharing_3_0_la_SOURCES); do \
		$(PEDANSEE) -c pedansee.conf $$i -- -x c $(DEFS) $(libdmapsharing_3_0_la_CFLAGS); \
	done
	set -e; for i in $(libdmapsharinginclude_HEADERS) \
	                 $(noinst_HEADERS); do \
		$(PEDANSEE) -c pedansee.conf $$i -- -x c $(DEFS) $(libdmapsharing_3_0_la_CFLAGS); \
	done
endif

EXTRA_DIST = generate-test-suites
